tests/fixtures/invalid/pow_none_none_int.py
# Cannot call pow() with None, None, Int
x = pow(None, None, 1)
